@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 f75cf853b107f82e0bf85f17f15c4bba70e03d27 ChangeLog
+SHA1 5aab99601c5ad526a33072d1156825dabde1729e ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 88ff5342836eb149ec9426d26f12b26bebe619dd META.yml
-SHA1 444c53b97e69cbc813b26abb8f7961edd0c72df3 MYMETA.json
-SHA1 55c59bdb2ef34b8a6a19c38d9c7e666979827f70 MYMETA.yml
-SHA1 4c4a4408b19a5aca34c5d31c130ab7609194fead Makefile.PL
+SHA1 a79746ef7b00702834a08b0b8280eff72425aa74 META.yml
+SHA1 638abe166286c5576faf3880fdbd44b80a750e55 MYMETA.json
+SHA1 9836e9e9810c2c281b615321660295521a12d18d MYMETA.yml
+SHA1 8e8db9a32fb265f2805c0a7662a3b1889affb35d Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 330e4526dfed3d905c6d224c0f0b8124e7323038 lib/Net/FullAuto.pm
+SHA1 8a4b5e4ae22b0de3bfa9e555bdc0090fddfa4051 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,13 +50,13 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 9a749b2462f42024422fed406f1d7dc8b3cc0365 lib/Net/FullAuto/FA_Core.pm
+SHA1 6b794570ef0c7fc2eaa2145f2d01b0b9cb5b9a0b lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlECo5AACgkQJM3IZYB6aOrHRgCfaArDkMvKt5qlwzk8MEpU9whA
-voAAnjbOy16OAMP+PevmOeebZsEspvcH
-=dfkB
+iEYEARECAAYFAlECzEkACgkQJM3IZYB6aOr4VQCffpG4aDHXTD2T/mWrqfZT7iN8
+nWsAnRoBOfGWs43SdzTh/vcfrxJyLSfd
+=KoGz
 -----END PGP SIGNATURE-----
