@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999979';
+our $VERSION='0.999980';
 
 
 use 5.005;
